# linux-app

./: README.md  README.rst
_gsoc_proposal/micro_speech/: prj.conf
_gsoc_proposal/micro_speech/tflite/: audio_preprocessor_int8_model_data.h
audio_sample/: merge_wav.py
dev_openamp_rsc_table/src/: main_remote.c
linux_app/: main.c
linux_app/backup/: backup-20-06-not-skip-wav-header.c  backup2.c  main-non-blocking-read copy.c  main-simple.c
linux_application/: README.rst  record_main.c  simulation_main.c
micro_speech/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
micro_speech/log/: inference.txt  inference_binary_model.txt  inference_qemu_xtensa.txt
micro_speech/src/: main.cpp  main_functions.cpp  main_functions.hpp  silence_1000ms_audio_data.cc
micro_speech/src/inference/: audio_preprocessor_int8_model.cpp  audio_preprocessor_int8_model.hpp  micro_model_settings.h  micro_speech_quantized_model.cpp  micro_speech_quantized_model.hpp  model_runner.cpp  model_runner.hpp
micro_speech/src/transport/: rpmsg_transport.c  rpmsg_transport.h
micro_speech_openamp/: CMakeLists.txt  prj.conf
micro_speech_openamp/backup/: main_functions_backup.cpp  main_functions_no_shutdown.cpp
micro_speech_openamp/src/: main.cpp  main_functions.cpp
micro_speech_qemu/: CMakeLists copy.txt  CMakeLists.txt  prj.conf  tree.txt
micro_speech_qemu/backup/: main_backup.c  main_functions_backup.cpp  micro_speech.cpp  micro_speech.h
micro_speech_qemu/src/: main_functions.cpp  no_1000ms_audio_data.cc  noise_1000ms_audio_data.cc
microspeech_openamp/backup/: main_functions.cpp  main_functions_with_shutdown.cpp
microspeech_openamp/src/: main_functions.cpp
microspeech_openamp/tflite/: micro_speech_quantized_model_data.h
proposal/micro_speech/log/: build_log.txt
proposal/temp_prediction/: README.md
read_issue/linux_app/: main.c
read_issue/openamp_rsc_table/: .gitignore
read_issue/openamp_rsc_table/src/: main_remote.c
simple_linux/: main.c
simple_linux/backup/: back-up.c  main-non-blocking-read.c  main-poll.c  test  test_100bytes2.txt
src/: main.c  main_functions.cpp
temp_prediction/: CMakeLists.txt
temp_prediction/src/: model.cpp
temp_prediction/training_data/: model_visualization.html  temperature_model_data.cc
training_data/: TemperaturePrediction_GSoC.ipynb  temperature_model.tflite
